--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     },
     "routes": [
         {
+            "src": "/images/(.*)",
+            "dest": "/public/images/$1"
+        },
+        {
             "src": "/build/(.*)",
             "dest": "/public/build/$1"
         },
