--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,7 @@
         "doctrine/dbal": "^4.2",
         "fakerphp/faker": "^1.24",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
-        "livewire/flux": "^2.0",
-        "livewire/volt": "^1.6.7"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
         "laravel/pail": "^1.2.2",
