--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
+        },
+        {
+            "src": "/favicon.png",
+            "dest": "/public/favicon.png"
         }
     ],
     "env": {
